--- a/About.html
+++ b/About.html
@@ -16,7 +16,7 @@
 
 
 </head>
-
+<!-- this is a comment -->
 <body>
     <header class="main-header">
         <img class="logo" src="graphics/sorrento_by_the_sea_logo.jpg">
